# social-network-dst-emscripten

./: .gitignore  CMakeCache.txt  Dockerfile  README.md  build-for-client.sh  clear-build.sh  docker-compose.yml  flake.nix  package-lock.json  package.json  social_network.thrift
.github/workflows/: ci.yml
config/: service-config.json
convertedClient/: convertedMicroServices.js  di.js  index-js.js  index.html  package-lock.json  package.json  signup.html
convertedClient/pages/: create-post.js  timeline.js
convertedClient/pages/contact/: contact-js.js  contact.html
convertedClient/pages/index/: index-js.js  index.html
convertedClient/pages/main/: create-post.js  main-js.js  main.html
convertedClient/pages/posts/: posts-js.js  posts.html
convertedClient/pages/posts-test/: posts-js.js
convertedClient/pages/profile/: profile-js.js  profile.html
convertedClient/pages/signup/: signup-js.js  signup.html
convertedClient/script/: contact-js.js  create-post.js  index-js.js  main-js.js  profile-js.js  signup-js.js  timeline.js  yjs.js
convertedClient/src/: contact.html  main.html  profile.html  signup.html
convertedClient/style/: main.css
convertedClient/wasm/: convertedMicroServices.js  convertedMicroServices.wasm
convertedMicroServices/: .gitignore  CMakeLists.txt  README.md  WASM_EXPLAINED.md  index-test.html
convertedMicroServices/ComposePostHandler/: ComposePostHandler.cpp  ComposePostHandler.hpp
convertedMicroServices/ComposePostService/: ComposePostService.cpp  ComposePostService.hpp
convertedMicroServices/HomeTimelineHandler/: HomeTimelineHandler.cpp  HomeTimelineHandler.hpp
convertedMicroServices/InMemoryPersistenceService/: InMemoryPersistenceService.cpp  InMemoryPersistenceService.hpp
convertedMicroServices/MediaHandler/: Media.hpp  MediaHandler.cpp  MediaHandler.hpp
convertedMicroServices/PostStorageHandler/: PostStorageHandler.cpp  PostStorageHandler.hpp
convertedMicroServices/SessionStorageUserService/: SessionStorageUserService.cpp  SessionStorageUserService.hpp
convertedMicroServices/SocialGraphHandler/: SocialGraphHandler.cpp  SocialGraphHandler.hpp
convertedMicroServices/TestService/: TestService.cpp  TestService.hpp
convertedMicroServices/TextHandler/: TextHandler.cpp  TextHandler.hpp
convertedMicroServices/Types/Creator/: Creator.cpp  Creator.hpp
convertedMicroServices/Types/Media/: Media.cpp
convertedMicroServices/Types/Post/: Post.cpp  Post.hpp  PostType.cpp  PostType.hpp
convertedMicroServices/Types/TextServiceReturn/: TextServiceReturn.cpp  TextServiceReturn.hpp
convertedMicroServices/Types/Url/: Url.cpp  Url.hpp
convertedMicroServices/Types/User/: User.cpp  User.hpp
convertedMicroServices/Types/UserMention/: UserMention.cpp  UserMention.hpp
convertedMicroServices/UniqueIdHandler/: UniqueIdHandler.cpp  UniqueIdHandler.hpp
convertedMicroServices/UrlShortenHandler/: UrlShortenHandler.cpp  UrlShortenHandler.hpp
convertedMicroServices/UserHandler/: UserHandler.cpp  UserHandler.hpp
convertedMicroServices/UserMentionHandler/: UserMentionHandler.cpp  UserMentionHandler.hpp
convertedMicroServices/UserTimelineHandler/: UserTimelineHandler.cpp  UserTimelineHandler.hpp
gen-cpp/: ComposePostService.cpp  ComposePostService.h  HomeTimelineService.cpp  HomeTimelineService.h  MediaService.cpp  MediaService.h  PostStorageService.cpp  PostStorageService.h  SocialGraphService.cpp  SocialGraphService.h  TestService.cpp  TestService.h  TestService_server.skeleton.cpp  TextService.cpp  TextService.h  UniqueIdService.cpp  UniqueIdService.h  UrlShortenService.cpp  UrlShortenService.h  UserMentionService.cpp  UserMentionService.h  UserService.cpp  UserService.h  UserTimelineService.cpp  UserTimelineService.h  social_network_types.cpp  social_network_types.h
gen-lua/: social_network_TestService.lua
nginx-web-server/conf/: nginx.conf
nginx-web-server/lua-scripts/api/: test_service.lua
nginx-web-server/pages/: main.html
openshift/config/: service-config.json
src/: CMakeLists.txt
src/TestService/: CMakeLists.txt  TestHandler.h  TestService.cpp
src/generate-libmemcached-prefix/tmp/: generate-libmemcached-cfgcmd.txt  generate-libmemcached-mkdirs.cmake
ws-server/: package-lock.json  package.json
(+3 files in other folders)
